<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_screen_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="285dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toTopOf="@+id/logoutBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/person_letter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/r"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/logoutBut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button_blue_outline"
        android:text="@string/logout"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_red_outline"
        android:text="@string/del_account"
        android:textColor="@color/quantum_googred"
        app:layout_constraintBottom_toTopOf="@+id/changePassBut"
        app:layout_constraintEnd_toEndOf="@+id/changePassBut"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/changePassBut" />

    <Button
        android:id="@+id/changePassBut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_blue_outline"
        android:text="@string/changePassButton"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/logoutBut"
        app:layout_constraintEnd_toEndOf="@+id/logoutBut"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logoutBut" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>