...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:id="@+id/change_password_id"
    >

    <EditText
        android:id="@+id/currentPassET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
